infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabboard-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: collabboard-web
  template:
    metadata:
      labels:
        app: collabboard-web
    spec:
      containers:
        - name: web
          image: collabboard/web:latest
          ports:
            - containerPort:10000
---
apiVersion: v1
kind: Service
metadata:
  name: collabboard-web
spec:
  selector:
    app: collabboard-web
  ports:
    - port: 80
      targetPort:10000
